fixed alignment bug

--- a/basic.css
+++ b/basic.css
@@ -1,5 +1,6 @@
 body {
   padding-top: 50px;
+  padding-left: 10px;
 }
 .main-section {
   padding: 40px 10px;
